# gura-rs-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
examples/: basic.rs  creation.rs  dump.rs  errors.rs  with_structs.rs
src/: errors.rs  gura_parser.rs  lib.rs  macros.rs  parser.rs  pretty_print_float.rs
tests/: arrays.rs  common.rs  exception_report.rs  full.rs  importing.rs  indentation.rs  objects.rs  strings.rs  useless_lines.rs  variables.rs
tests/arrays/: test.py
tests/arrays/tests-files/: array_in_object.ura  array_in_object_trailing_comma.ura  bug_trailing_comma.ura  normal.ura  with_comments.ura
tests/exception_report/tests-files/: duplicated_key_error_1.ura  duplicated_key_error_2.ura  duplicated_key_error_3.ura  duplicated_variable_error_1.ura  duplicated_variable_error_2.ura  duplicated_variable_error_3.ura  importing_error_1.ura  importing_error_2.ura  indentation_error_1.ura  indentation_error_2.ura  indentation_error_3.ura  indentation_error_4.ura  issue_12.ura  missing_variable_error_1.ura  missing_variable_error_2.ura  missing_variable_error_3.ura  missing_variable_error_4.ura  missing_variable_error_5.ura  missing_variable_error_6.ura  parsing_error_1.ura  parsing_error_2.ura  parsing_error_3.ura  parsing_error_4.ura
tests/full/: test.py
tests/full/tests-files/: full.ura  nan.ura
tests/importing/: test.py
tests/importing/tests-files/: duplicated_key.ura  duplicated_key_aux_1.ura  duplicated_variable.ura  duplicated_variable_aux_1.ura  duplicated_variable_aux_2.ura  normal.ura  one.ura  three.ura  two.ura  with_variable.ura
tests/indentation/: test.py
tests/indentation/tests-files/: different_chars.ura  more_than_4_difference.ura  not_divisible_by_4.ura  (+1 more)
tests/objects/: test.py
tests/strings/: test.py
tests/useless_lines/: test.py
tests/variables/: test.py
(+21 files in other folders)
