[package]
name = "gura"
description = "A Gura configuration language serializer/deserializer for Rust"
version = "0.3.1"
authors = ["JWare Solutions <jware.organization@gmail.com>"]
repository = "https://github.com/gura-conf/gura-rs-parser"
documentation = "https://docs.rs/gura/"
edition = "2018"
license = "MIT"
keywords = ["parse", "dump", "serialize", "deserialize", "stringify"]

[dependencies]
itertools = "0.10.1"
unicode-segmentation = "1.7.1"
regex = "1.5.4"
indexmap = "1.7.0"
float-pretty-print = "0.1.0"

[dev-dependencies]
tempfile = "3.2.0"