[package]
authors = ["JWare Solutions <jware.organization@gmail.com>"]
description = "A Gura configuration language serializer/deserializer for Rust"
documentation = "https://docs.rs/gura/"
edition = "2018"
keywords = ["parse", "dump", "serialize", "deserialize", "stringify"]
license = "MIT"
name = "gura"
repository = "https://github.com/gura-conf/gura-rs-parser"
version = "0.4.2"

[dependencies]
float-pretty-print = "0.1.0"
indexmap = "1.7.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
regex = "1.5.4"
unicode-segmentation = "1.7.1"

[dev-dependencies]
tempfile = "3.2.0"
