[package]
authors = ["JWare Solutions <jware.organization@gmail.com>"]
description = "A Gura configuration language serializer/deserializer for Rust"
documentation = "https://docs.rs/gura/"
edition = "2018"
keywords = ["parse", "dump", "serialize", "deserialize", "stringify"]
license = "MIT"
name = "gura"
repository = "https://github.com/gura-conf/gura-rs-parser"
version = "0.5.5"

[dependencies]
float-pretty-print = "0.1.1"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tempfile = "3.19.1"
